--- a/index.html
+++ b/index.html
@@ -80,10 +80,7 @@
           <div class="card-wrapper">
             <div class="card">
               <div class="icon-circle red-bg">
-                <img
-                  src="../B13-A01-Knowledge-Vault/assets/Vector.png"
-                  alt="Stacked notes"
-                />
+                <img src="../assets/Vector.png" alt="Stacked notes" />
               </div>
               <h2>Scattered Notes</h2>
               <p>
@@ -93,10 +90,7 @@
 
             <div class="card">
               <div class="icon-circle red-bg">
-                <img
-                  src="../B13-A01-Knowledge-Vault/assets/Bookmarks.png"
-                  alt="Bookmark"
-                />
+                <img src="../assets/Bookmarks.png" alt="Bookmark" />
               </div>
               <h2>Bookmark Overload</h2>
               <p>Hundreds of saved links you'll never revisit or remember.</p>
@@ -104,10 +98,7 @@
 
             <div class="card">
               <div class="icon-circle red-bg">
-                <img
-                  src="../B13-A01-Knowledge-Vault/assets/Brain.png"
-                  alt="Brain connections"
-                />
+                <img src="../assets/Brain.png" alt="Brain connections" />
               </div>
               <h2>No Idea Connections</h2>
               <p>
@@ -118,10 +109,7 @@
 
             <div class="card">
               <div class="icon-circle red-bg">
-                <img
-                  src="../B13-A01-Knowledge-Vault/assets/Info.png"
-                  alt="Information circle"
-                />
+                <img src="../assets/Info.png" alt="Information circle" />
               </div>
               <h2>Forgetting What You Learned</h2>
               <p>Knowledge fades because there's no system to retain it.</p>
@@ -133,7 +121,7 @@
       <section class="solution-section">
         <div class="solution-container">
           <div class="graphic-side">
-            <img src="../B13-A01-Knowledge-Vault/assets/knowledge.png" alt />
+            <img src="../assets/knowledge.png" alt />
           </div>
 
           <div class="content-side">
@@ -150,38 +138,27 @@
 
             <ul class="check-list">
               <li>
-                <img
-                  src="../B13-A01-Knowledge-Vault/assets/CheckCircle.png"
-                  alt
-                />Capture ideas with structure built-in from day one
+                <img src="../assets/CheckCircle.png" alt />Capture ideas with
+                structure built-in from day one
               </li>
 
               <li>
-                <img
-                  src="../B13-A01-Knowledge-Vault/assets/CheckCircle.png"
-                  alt
-                />Connect related concepts automatically as you write
+                <img src="../assets/CheckCircle.png" alt />Connect related
+                concepts automatically as you write
               </li>
 
               <li>
-                <img
-                  src="../B13-A01-Knowledge-Vault/assets/CheckCircle.png"
-                  alt
-                />Build lasting knowledge through reflection prompts
+                <img src="../assets/CheckCircle.png" alt />Build lasting
+                knowledge through reflection prompts
               </li>
 
               <li>
-                <img
-                  src="../B13-A01-Knowledge-Vault/assets/CheckCircle.png"
-                  alt
-                />Find anything instantly with semantic search
+                <img src="../assets/CheckCircle.png" alt />Find anything
+                instantly with semantic search
               </li>
 
               <li>
-                <img
-                  src="../B13-A01-Knowledge-Vault/assets/CheckCircle.png"
-                  alt
-                />
+                <img src="../assets/CheckCircle.png" alt />
                 Find anything instantly with semantic search
               </li>
             </ul>
@@ -213,7 +190,7 @@
           <div class="footer-brand">
             <div class="logo-group">
               <img
-                src="../B13-A01-Knowledge-Vault/assets/logo-footer.png"
+                src="../assets/logo-footer.png"
                 alt="KV Logo"
                 class="footer-logo"
               />
