--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <div class="card-wrapper">
             <div class="card">
               <div class="icon-circle red-bg">
-                <img src="../assets/Vector.png" alt="Stacked notes" />
+                <img src="./assets/Vector.png" alt="Stacked notes" />
               </div>
               <h2>Scattered Notes</h2>
               <p>
@@ -88,7 +88,7 @@
 
             <div class="card">
               <div class="icon-circle red-bg">
-                <img src="../assets/Bookmarks.png" alt="Bookmark" />
+                <img src="./assets/Bookmarks.png" alt="Bookmark" />
               </div>
               <h2>Bookmark Overload</h2>
               <p>Hundreds of saved links you'll never revisit or remember.</p>
@@ -96,7 +96,7 @@
 
             <div class="card">
               <div class="icon-circle red-bg">
-                <img src="../assets/Brain.png" alt="Brain connections" />
+                <img src="./assets/Brain.png" alt="Brain connections" />
               </div>
               <h2>No Idea Connections</h2>
               <p>
@@ -107,7 +107,7 @@
 
             <div class="card">
               <div class="icon-circle red-bg">
-                <img src="../assets/Info.png" alt="Information circle" />
+                <img src="./assets/Info.png" alt="Information circle" />
               </div>
               <h2>Forgetting What You Learned</h2>
               <p>Knowledge fades because there's no system to retain it.</p>
@@ -119,7 +119,7 @@
       <section class="solution-section">
         <div class="solution-container">
           <div class="graphic-side">
-            <img src="../assets/knowledge.png" alt />
+            <img src="./assets/knowledge.png" alt />
           </div>
 
           <div class="content-side">
@@ -188,7 +188,7 @@
           <div class="footer-brand">
             <div class="logo-group">
               <img
-                src="../assets/logo-footer.png"
+                src="./assets/logo-footer.png"
                 alt="KV Logo"
                 class="footer-logo"
               />
